[gd_scene load_steps=5 format=2]

[ext_resource path="res://gui.tscn" type="PackedScene" id=1]
[ext_resource path="res://maps/hangar.tscn" type="PackedScene" id=5]
[ext_resource path="res://client.gd" type="Script" id=6]
[ext_resource path="res://vendors/p1x/camera_3d_effects/camera.tscn" type="PackedScene" id=7]

[node name="multiplayer_client" type="Spatial"]

[node name="Client" type="Node" parent="."]
script = ExtResource( 6 )

[node name="GUI" parent="Client" instance=ExtResource( 1 )]

[node name="info" parent="Client/GUI/info" index="0"]
visible = true

[node name="logs" parent="Client/GUI/info" index="1"]
visible = true
margin_top = 76.0
margin_bottom = 172.0

[node name="help" parent="Client/GUI/info" index="2"]
margin_top = 184.0
margin_bottom = 440.0

[node name="cameras" type="Spatial" parent="Client"]

[node name="camera1" parent="Client/cameras" instance=ExtResource( 7 )]
transform = Transform( -0.793598, -0.38613, 0.470218, -0.00523557, 0.777128, 0.62932, -0.608419, 0.496966, -0.618749, 7.06996, 21.6067, -28.6293 )

[node name="hangar" parent="Client" instance=ExtResource( 5 )]

[node name="start" type="Position3D" parent="Client/hangar"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.23785, 0 )

[node name="tick" type="Timer" parent="Client"]
wait_time = 0.033

[node name="players" type="Node" parent="Client"]
[connection signal="pressed" from="Client/GUI/info/info/vbox/setup/btn_connect" to="Client" method="_on_btn_connect_pressed"]
[connection signal="timeout" from="Client/tick" to="Client" method="_on_tick_timeout"]

[editable path="Client/GUI"]
